<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/title_app" />

        <ImageView
            android:id="@+id/image_set"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            android:src="@drawable/photo01" />


        <TextView
            android:id="@+id/text_set"
            style="@style/description_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/sara_ruesga" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ref_website"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:paddingTop="8dp"
                android:src="@drawable/website" />

            <ImageView
                android:id="@+id/ref_email"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/ref_website"
                android:layout_marginStart="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"

                android:src="@drawable/email" />

            <ImageView
                android:id="@+id/ref_address"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ref_email"
                android:layout_marginStart="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:src="@drawable/map" />

            <ImageView
                android:id="@+id/ref_phone"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_below="@id/ref_address"
                android:layout_marginStart="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/web_txt"
                style="@style/text_look"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ref_website"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:text="@string/web_direction" />

            <TextView
                android:id="@+id/email_txt"
                style="@style/text_look"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/web_txt"
                android:layout_toEndOf="@id/ref_email"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/sara_email" />

            <TextView
                android:id="@+id/address"
                style="@style/text_look"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_txt"
                android:layout_toEndOf="@id/ref_email"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/street_location" />

            <TextView
                android:id="@+id/phone_number"
                style="@style/text_look"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_toEndOf="@id/ref_address"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/telephone_number" />


            <Button
                android:id="@+id/button_carousel"
                style="@style/button_look"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:onClick="carousel"
                android:text="Carousel" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>